# cmake_vcpkg_project

./: .clang_tidy  .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: cross_platform_build.yml
.workflows/: cross_platform_build.yml
scripts/: install_vcpkg.bat  install_vcpkg.sh
src/: CMakeLists.txt  formula.h  main.cpp
tst/: CMakeLists.txt  formula-tests.cpp
